use logging and argparse new way to get ips request timeout set to 60s ip filter keep windows awake while --repeat -r = --repeat -d = --dry-run -l = --log-level, to set log level

--- a/config-example.json
+++ b/config-example.json
@@ -15,5 +15,11 @@
       ],
       "proxied": false
     }
-  ]
+  ],
+  "get_ip": {
+    "ipv4": "8.8.8.8",
+    "ipv4_prefix": "",
+    "ipv6": "2001::",
+    "ipv6_prefix": ""
+  }
 }
